# demo-cmake-unity

./: CMakeLists.txt  README.md  main.c
demo/: fibonacci.c
test/: CMakeLists.txt  test_fibonacci.c
